<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="id.co.lazystudio.popularmovies.SplashScreen">

    <ImageView
        android:id="@+id/splash_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <ImageView
                android:id="@+id/splash_icon"
                android:layout_height="128dp"
                android:layout_width="128dp"
                android:layout_marginBottom="128dp"
                android:src="@mipmap/ic_launcher" />
        </FrameLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/splash_app_name"
            android:layout_centerHorizontal="true" />
        <TextView
            android:id="@+id/splash_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/splash_tagline"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textStyle="normal|bold"
            android:textSize="@dimen/splash_large_text" />
        <TextView
            android:id="@+id/splash_tagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/splash_margin"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/splash_author"
            android:text="@string/app_tagline"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="@dimen/splash_normal_text"/>
        <TextView
            android:id="@+id/splash_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/app_author"
            android:textStyle="bold"
            android:textColor="@android:color/white"/>
    </RelativeLayout>


</RelativeLayout>
