<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="id.co.lazystudio.popularmovies.DetailMovie"
    tools:showIn="@layout/activity_detail_movie"
    android:id="@+id/content_container">

    <!-- POSTER + TITLE -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:id="@+id/movie_title_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:colorBackground"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">
            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/placeholder">
                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/poster_progressbar"
                    android:layout_centerInParent="true" />

                <ImageView
                    android:id="@+id/poster_imageview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"/>

            </RelativeLayout>

            <FrameLayout
                android:id="@+id/movie_title_framelayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:background="?android:colorBackground">

                <RelativeLayout
                    android:id="@+id/movie_title_relativelayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">
                    <TextView
                        android:id="@+id/movie_title_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/smaller_margin"
                        style="@style/AppTheme.MovieTitle"
                        android:maxLines="2"/>
                    <TextView
                        android:id="@+id/movie_releasedate_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AppTheme.TextSecondary"
                        android:layout_below="@id/movie_title_textview"
                        android:visibility="invisible"/>
                    <TextView
                        android:id="@+id/movie_runtime_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AppTheme.TextSecondary"
                        android:layout_below="@id/movie_title_textview"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_toRightOf="@+id/movie_releasedate_textview"
                        android:visibility="invisible"/>
                </RelativeLayout>
            </FrameLayout>
        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/detail_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:background="?android:colorBackground">

            <!-- RATE + POPULARITY -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/line_spacing">
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/smaller_margin"
                        app:cardCornerRadius="@dimen/smaller_rounded_corner">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/small_margin"
                            android:layout_marginBottom="@dimen/small_margin"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            android:layout_marginRight="@dimen/activity_horizontal_margin">
                            <TextView
                                android:id="@+id/movie_ratelabel_textview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                style="@style/AppTheme.MovieDetailSecondary"
                                android:text="@string/label_rate"/>
                            <TextView
                                android:id="@+id/movie_rateaverage_textview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/movie_ratelabel_textview"
                                android:layout_centerHorizontal="true"/>
                            <TextView
                                android:id="@+id/movie_ratecount_textview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/movie_rateaverage_textview"
                                android:layout_centerHorizontal="true"
                                style="@style/AppTheme.MovieDetailSecondary"
                                android:text="something"
                                android:visibility="invisible" />
                        </RelativeLayout>

                    </android.support.v7.widget.CardView>
                </FrameLayout>
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/smaller_margin"
                        app:cardCornerRadius="@dimen/smaller_rounded_corner">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/small_margin"
                            android:layout_marginBottom="@dimen/small_margin"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            android:layout_marginRight="@dimen/activity_horizontal_margin">
                            <TextView
                                android:id="@+id/movie_popularitylabel_textview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                style="@style/AppTheme.MovieDetailSecondary"
                                android:text="@string/label_popularity"/>
                            <TextView
                                android:id="@+id/movie_popularity_textview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/movie_popularitylabel_textview"
                                android:layout_centerHorizontal="true"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/movie_popularity_textview"
                                android:layout_centerHorizontal="true"
                                style="@style/AppTheme.MovieDetailSecondary"
                                android:text="..."
                                android:visibility="invisible"/>
                        </RelativeLayout>

                    </android.support.v7.widget.CardView>
                </FrameLayout>
            </LinearLayout>

            <!-- OVERVIEW -->
            <RelativeLayout
                android:id="@+id/movie_overview_relativelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/line_spacing"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:visibility="gone">
                <TextView
                    android:id="@+id/movie_overview_label_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/label_overview"
                    style="@style/AppTheme.MovieCategoryTitle"/>
                <TextView
                    android:id="@+id/movie_overview_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/smaller_line_spacing"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:layout_below="@id/movie_overview_label_textview"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
